# crocoddyl

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  PUBLICATIONS.md  README.md  crocoddyl.cmake  dependencies.rosinstall  flake.nix  package.xml  proto_loco_impact.py  pyproject.toml  setup.cfg
benchmark/: CMakeLists.txt  all-robots.cpp  all_robots.cpp  arm-kinova-codegen.cpp  arm-manipulation-cg.cpp  arm-manipulation-codegen.cpp  arm-manipulation-optctrl.cpp  arm-manipulation-timings.cpp  arm-manipulation.cpp  arm_manipulation.py  arm_manipulation_optctrl.cpp  arm_manipulation_optctrl.py  arm_manipulation_timings.cpp  bipedal-icub-with-contact-codegen.cpp  bipedal-timings.cpp  bipedal-with-contact-cg.cpp  bipedal-with-contact-codegen.cpp  bipedal_timings.cpp  bipedal_walk.py  bipedal_walk_optctrl.py  boxqp.cpp  hyq.py  legged-robots-codegen.cpp  lqr-optctrl.cpp  lqr.cpp  lqr.py  lqr_optctrl.cpp  lqr_optctrl.py  quadruped-anymal-with-contact-codegen.cpp  quadruped-benchmark.cpp  quadruped-gaits.cpp  quadruped-gaits.hpp  quadruped-hyq-with-contact-codegen.cpp  quadruped-solo-with-contact-codegen.cpp  quadruped-solo-with-contact-codegen2.cpp  quadrupedal-gaits-optctrl.cpp  quadrupedal-gaits.cpp  quadrupedal_gaits.py  quadrupedal_gaits_optctrl.cpp  quadrupedal_gaits_optctrl.py  (+11 more)
benchmark/factory/: arm-collision.hpp  arm-kinova.hpp  arm.hpp  biped-icub.hpp  biped.hpp  legged-robots.hpp  quadruped-anymal.hpp  quadruped-hyq.hpp  quadruped-solo.hpp  robot-ee-names.hpp  robots.hpp
cddp/: cost.py  (+15 more)
crocoddyl/: CMakeLists.txt  __init__.py  action.py  activation.py  actuation.py  box_ddp.py  box_kkt.py  callbacks.py  centroidal_utils.py  contact.py  cost.py  ddp.py  diagnostic.py  differential_action.py  double_pendulum.py  fddp.py  floating_contact.py  flying.py  impact.py  integrated_action.py  kkt.py  logger.py  manipulator.py  plots.py  qpsolvers.py  robots.py  shooting.py  solver.py  state.py  unicycle.py  utils.py
crocoddyl/backup/: __init__.py
crocoddyl/costs/: __init__.py
crocoddyl/dynamics/: __init__.py  dynamics.py  floating_base_dynamics.py  forward_dynamics.py
crocoddyl/locomotion/: __init__.py  centroidal_phi.py  contact_sequence_wrapper.py  problem_definition.py  spline_utils.py
crocoddyl/solver/: ddp.py
examples/: 1.introduction_to_crocoddyl.ipynb  2.pick_and_place_task.ipynb  CMakeLists.txt  __init__.py  acrobot.py  arm_manipulation.py  arm_manipulation_fwddyn.py  arm_manipulation_id.py  arm_manipulation_invdyn.py  arm_manipulation_num_diff.py  biped_utils.py  bipedal_gaits_fwddyn.py  bipedal_gaits_invdyn.py  bipedal_walk.py  bipedal_walk_fwddyn.py  bipedal_walk_invdyn.py  bipedal_walk_ubound.py  bipedal_walking_from_foot_traj.py  boxfddp_vs_boxddp.py  cartpole_swing_up.py  conf_talos_warm_start.py  double_pendulum.py  double_pendulum_fwddyn.py  double_pendulum_id.py  double_pendulum_invdyn.py  double_pendulum_utils.py  humanoid_manipulation.py  humanoid_manipulation_ubound.py  humanoid_taichi.py  hyq.py  jump.py  kinton_flying.py  kinton_flying_base.py  kinton_mission.py  p2p.py  p2p_talos_arm.py  quadrotor.py  quadrotor_fwddyn.py  quadrotor_id.py  quadrotor_invdyn.py  (+20 more)
examples/backup/: hyq.py  spring_mass.py  talos.py
examples/kinton/: kinton_flying.py  kinton_flying_base.py
examples/locomotion/: conf_talos_warm_start.py  talos_warm_start.py
examples/log/: check_logfiles.sh  update_logfiles.sh
examples/notebooks/: 2DOFs.ipynb  __init__.py  acrobot.ipynb  acrobot_limited_torque.ipynb  acrobot_urdf.ipynb  arm_example.py  arm_manipulation.ipynb  bipedal_walking.ipynb  bipedal_walking_from_foot_traj.ipynb  borinot_arm.ipynb  cartpole.ipynb  cartpole.py  cartpole_swing_up.ipynb  cartpole_swing_up.py  cartpole_swing_up_sol.ipynb  cartpole_utils.py  crocoddyl  introduction_to_crocoddyl.ipynb  kinton_fixed_base.ipynb  kinton_flying_base.ipynb  kinton_flying_ee.ipynb  kinton_flying_mission.ipynb  loco3d.ipynb  loco3d.py  manipulator.ipynb  p2p.py  quadcopter_mission.ipynb  unicycle.ipynb  unicycle.py  unicycle_towards_origin.ipynb  unicycle_towards_origin.py  unicycle_utils.py  whole_body_manipulation.ipynb
examples/npydata/: jump.frontal.us.npy  jump.frontal.xs.npy  jump.initial.us.npy  jump.initial.xs.npy  jump.landing.us.npy  jump.landing.xs.npy  jump.lateral.us.npy  jump.lateral.xs.npy  jump.py  jump.twist.us.npy  jump.twist.xs.npy  salto.angle.05.us.npy  salto.angle.05.xs.npy  salto.angle.08.us.npy  salto.angle.08.xs.npy  salto.angle.11.us.npy  salto.angle.11.xs.npy  salto.angle.14.us.npy  salto.angle.14.xs.npy  salto.angle.17.us.npy  salto.angle.17.xs.npy  salto.angle.20.us.npy  salto.angle.20.xs.npy  salto.angle.23.us.npy  salto.angle.23.xs.npy  salto.angle.26.us.npy  salto.angle.26.xs.npy  salto.angle.29.us.npy  salto.angle.29.xs.npy  salto.angle.32.us.npy  salto.angle.32.xs.npy  (+4 more)
include/: CMakeLists.txt
notebooks/: 01_introduction_to_crocoddyl.ipynb  02_optimizing_a_cartpole_swingup.ipynb  04_actuating_an_acrobot.ipynb  05_codegenerating_a_cartpole.ipynb  06_scaling_to_robotics.ipynb  07_targetting_in_aerial_manipulation.ipynb  CMakeLists.txt  arm_example.py  arm_manipulation.ipynb  bipedal_walking.ipynb  p2p.py  run_notebook.py  unicycle_towards_origin.py  whole_body_manipulation.ipynb
src/: CMakeLists.txt
unittest/: CMakeLists.txt  action_factory.hpp  activation.py  activation_factory.hpp  all.py  conf_talos_1step.py  contact.py  continuous.py  cost.py  cost_factory.hpp  crocoddyl  crocoddyl_action_factory.hpp  crocoddyl_impulses_factory.hpp  crocoddyl_state_factory.hpp  crocoddyl_unittest_common.hpp  ddp.py  derivatives.py  dynamics.py  impact.py  impulses_factory.hpp  init_from_id.py  integrator.py  invdyn_deriv.py  random_generator.hpp  refact.py  robots.py  soft_constraint.py  solver_factory.hpp  state_factory.hpp  talos_1step.py  test_actions.cpp  test_actions.py  test_activation.cpp  test_activation.py  test_activations.cpp  test_actuation.cpp  test_actuation.py  test_armature.py  test_boxqp.cpp  test_boxsolvers.py  (+47 more)
(+1290 files in other folders)
